--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "faker": "^6.6.6",
     "mysql2": "^3.6.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
